# docker-devbox-installer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  coverage.bat  docker-devbox-installer.spec  pylintrc  pyproject.toml  setup.cfg  test.py
.github/workflows/: build.yml
docker_devbox_installer/: __main__.py
docker_devbox_installer/paquet_manager/: __init__.py
docker_devbox_installer/steps/: git_step.py  package_manager_step.py  packet_manager_step.py
docker_devbox_installer/utils/: command_execution.py  run_as_admin.py  windows_tools.py
stepbystep/: __init__.py
stepbystep/steps/: __init__.py
stepbystep_tests/: test_workflow.py
tests/: test_main.py
tests/paquet_manager/: test_paquet_manager.py
tests/steps/: test_git_step.py  test_package_manager_step.py
tests/utils/: test_command_execution.py  test_run_as_admin.py
