[tool.poetry]
name = "docker-devbox-installer"
version = "0.1.0"
description = "Installer for Docker Devbox"
authors = ["Rémi Alvergnat <remi.alvergnat@gfi.world>"]
license = "MIT"
packages = [
    { include = "docker_devbox_installer" },
    { include = "stepbystep" },
]

[tool.poetry.dependencies]
python = "3.8.x"
python-semantic-release = "^7.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pylint = "^2.6.0"
pyinstaller = "^4.1"
pre-commit = "^2.9.3"
commitizen = "^2.13.0"
coveralls = "^2.2.0"
coverage = "^5.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
