[tool.poetry]
name = "docker-devbox-installer"
version = "0.1.0"
description = "Installer for Docker Devbox"
authors = ["Rémi Alvergnat <remi.alvergnat@gfi.world>"]
license = "MIT"
packages = [
    { include = "docker_devbox_installer" },
    { include = "stepbystep" },
]

[tool.poetry.dependencies]
python = "3.8.x"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pylint = "^2.6.0"
pyinstaller = "^4.1"
pre-commit = "^2.9.3"
commitizen = "^2.13.0"
coveralls = "^2.2.0"
coverage = "^5.3.1"
python-semantic-release = {git = "https://github.com/Toilal/python-semantic-release", rev = "master"}

[tool.semantic_release]
version_variable = [
    "docker_devbox_installer/__version__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
build_command = "poetry build && pyinstaller --clean -y --dist ./dist docker-devbox-installer.spec"
commit_subject = "chore(release): release v{version}"
commit_author = "github-actions <actions@github.com>"
upload_to_pypi = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "stepbystep_tests"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
