[tool.poetry]
name = "docker-devbox-installer"
version = "0.1.1"
description = "Installer for Docker Devbox"
authors = ["Rémi Alvergnat <remi.alvergnat@gfi.world>","Pierre Lejeune <pierre.lejeune@gfi.world"]
license = "MIT"
packages = [{ include = "docker_devbox_installer" },{ include = "stepbystep" }]

[tool.poetry.dependencies]
python = "3.8.x"
questionary = "^1.9.0"
distro = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pylint = "^2.6.0"
pyinstaller = "^4.1"
pre-commit = "^2.9.3"
commitizen = "^2.13.0"
coveralls = "^2.2.0"
coverage = "^5.3.1"
python-semantic-release = {git = "https://github.com/Toilal/python-semantic-release", rev = "master"}
pytest-watch = "^4.2.0"
wheel = "^0.36.2"
pytest-depends = "^1.0.1"

[tool.semantic_release]
version_variable = "docker_devbox_installer/__version__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
branch = "main"
build_command = false
commit_subject = "chore(release): release v{version}"
commit_author = "github-actions <actions@github.com>"
upload_to_pypi = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests","stepbystep_tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
